--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^19.0.0",
     "sequelize": "^6.37.5",
     "swr": "^2.3.2",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
