--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,10 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=${NODE_ENV:-development}
-      - DATABASE_URL=mysql://sagarika:Sagarika@%71@mysql-db:3306/eCommerce
+      - IS_DOCKER=true 
+      - DATABASE_URL=mysql://sagarika:Sagarika%40%71@mysql-db:3307/eCommerce
       - DBUSER=sagarika
-      - PASSWORD=Sagarika@%71
+      - PASSWORD=Sagarika%40%71
       - DBNAME=eCommerce
       - DB_PORT=3306
     volumes:
@@ -23,26 +24,33 @@ services:
       mysql-db:
         condition: service_healthy
     restart: unless-stopped
-    
+    networks:
+      - my_network
+
   mysql-db:
     image: mysql:8.0
     container_name: mysql-db
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: Sagarika@%71
-      MYSQL_DATABASE: e-Commerce
+      MYSQL_ROOT_PASSWORD: Sagarika%40%71
+      MYSQL_DATABASE: eCommerce
       MYSQL_USER: sagarika
-      MYSQL_PASSWORD: Sagarika@%71
+      MYSQL_PASSWORD: Sagarika%40%71
     ports:
-      - "3306:3306"
+      - "3307:3306"
     volumes:
       - mysql-data:/var/lib/mysql
-    command: --default-authentication-plugin=mysql_native_password
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "sagarika", "-Sagarika@%71"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "sagarika", "-pSagarika%40%71"]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+    networks:
+      - my_network
 
 volumes:
   mysql-data:
+
+networks:
+  my_network:
+    driver: bridge
