--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
-    "next": "15.1.7",
+    "next": "^15.2.0",
     "next-cloudinary": "^6.16.0",
     "node-cache": "^5.1.2",
     "nookies": "^2.5.2",
@@ -38,9 +38,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@mindfiredigital/eslint-plugin-hub": "^1.9.1",
+    "@types/estree": "^1.0.6",
     "@types/js-cookie": "^3.0.6",
+    "@types/json-schema": "^7.0.15",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^20",
+    "@types/node": "^20.17.22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
