--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,16 @@
     ],
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "typeRoots": ["node_modules/@types"],  // Ensure the types directory is correctly referenced
+    "types": ["node", "estree", "json-schema"]  // Explicitly include necessary types
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/api/wishlists"],
+  "include": [
+    "next-env.d.ts", 
+    "**/*.ts", 
+    "**/*.tsx", 
+    ".next/types/**/*.ts", 
+    "app/api/wishlists"
+  ],
   "exclude": ["node_modules"]
 }
