--- a/package.json
+++ b/package.json
@@ -42,8 +42,11 @@
     "@eslint/eslintrc": "^3",
     "@mindfiredigital/eslint-plugin-hub": "^1.9.1",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/estree": "^1.0.6",
+    "@types/jest": "^29.5.14",
     "@types/js-cookie": "^3.0.6",
     "@types/json-schema": "^7.0.15",
     "@types/jsonwebtoken": "^9.0.9",
@@ -53,13 +56,16 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-c8": "^0.33.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "jsdom": "^26.0.0",
+    "msw": "^2.7.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
+    "vite": "^6.2.0",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.7"
   }
