--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,14 +22,15 @@
       "@/*": ["./*"]
     },
     "typeRoots": ["node_modules/@types"],  // Ensure the types directory is correctly referenced
-    "types": ["node", "estree", "json-schema"]  // Explicitly include necessary types
+    "types": ["node", "estree", "json-schema","vitest"]  // Explicitly include necessary types
   },
   "include": [
     "next-env.d.ts", 
     "**/*.ts", 
     "**/*.tsx", 
     ".next/types/**/*.ts", 
-    "app/api/wishlists"
+    "app/api/wishlists",
+    "vitest.config.ts"
   ],
   "exclude": ["node_modules"]
 }
