--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "jsdom": "^26.0.0",
     "msw": "^2.7.3",
     "postcss": "^8",
