--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.5.1",
     "dotenv": "^16.4.7",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
     "expect.js": "^0.3.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -31,6 +34,7 @@
     "node-cache": "^5.1.2",
     "nookies": "^2.5.2",
     "pg-hstore": "^2.3.4",
+    "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sequelize": "^6.37.5",
@@ -60,7 +64,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-c8": "^0.33.0",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7",
+    "eslint-config-next": "^15.1.7",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jsdom": "^26.0.0",
