--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
       "@/*": ["./*"]
     },
     "typeRoots": ["node_modules/@types"],
-    "types": ["node", "estree", "json-schema", "vitest/globals"]
+    "types": ["node", "estree", "json-schema"]
   },
   "include": [
     "next-env.d.ts",
