--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "e-commerce-nex.js",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "test": "vitest",
-    "prepare": "husky --install",
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
     "check-lint": "eslint . --ext ts --ext tsx --ext js",
@@ -68,6 +68,7 @@
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitest/coverage-c8": "^0.33.0",
     "eslint": "^9.21.0",
+    "eslint-config-next": "^15.2.1",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
