--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -21,8 +21,8 @@
     "paths": {
       "@/*": ["./*"]
     },
-    "typeRoots": ["node_modules/@types"],
-    "types": ["node", "estree", "json-schema"]
+    "typeRoots": ["./node_modules/@types/", "./types", "./node_modules"],
+    "types": ["node", "estree", "json-schema", "vitest", "vite/client"]
   },
   "include": [
     "next-env.d.ts",
