--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,5 +32,5 @@
     "app/api/wishlists",
     "vitest.config.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "app/components/auth/SignInForm.tsx"]
 }
