--- a/package.json
+++ b/package.json
@@ -21,17 +21,22 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.8.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.5.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
+    "embla-carousel-react": "^8.5.2",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
     "expect.js": "^0.3.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.479.0",
     "mysql2": "^3.12.0",
     "next": "^15.2.0",
     "next-auth": "^4.24.11",
@@ -43,6 +48,8 @@
     "react-dom": "^19.0.0",
     "sequelize": "^6.37.5",
     "swr": "^2.3.2",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "vite-plugin-magical-svg": "^1.5.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
